[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jostack-mdparse"
version = "0.0.0"
description = "Markdown file parser and structured extraction tool"
authors = [{ name = "hyunhee-jo" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = ["markdown", "parser", "extraction", "cli", "structured-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.scripts]
jostack-mdparse = "jostack_mdparse.cli:main"

[project.urls]
Repository = "https://github.com/hyunhee-jo/jostack-mdparse"
Issues = "https://github.com/hyunhee-jo/jostack-mdparse/issues"
Changelog = "https://github.com/hyunhee-jo/jostack-mdparse/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-socket>=0.7.0",
    "ruff>=0.9.0",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jostack_mdparse"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
